--- a/src/config/database.yml
+++ b/src/config/database.yml
@@ -24,9 +24,11 @@ development:
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
+# CircleCI用にhostの値を環境変数にするその環境変数がなかったときのみ、dbとする
 test:
   <<: *default
   database: app_test
+  host: <%= ENV.fetch("APP_DATABASE_HOST") { 'db' } %>
 
 # As with config/credentials.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
