--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,7 +6,7 @@ jobs:
   build:
     docker:
       - image: cimg/ruby:2.7.5
-    working_directory: ~/kthr01/
+    working_directory: ~/kthr01/src
     steps:
       - run: pwd
       - run: ls
