--- a/src/.rubocop_todo.yml
+++ b/src/.rubocop_todo.yml
@@ -12,4 +12,4 @@
 # Include: app/**/*.rb, config/**/*.rb, db/**/*.rb, lib/**/*.rb
 Rails/Output:
   Exclude:
-    - 'app/controllers/users_controller.rb'
+#    - 'app/controllers/users_controller.rb'
