executorでデフォルトの環境を設定

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,12 +10,6 @@ executors:
     working_directory: ~/kthr01/src
     docker:
       - image: cimg/ruby:2.7.5
-      - image: circleci/mysql:8.0
-        command: [--default-authentication-plugin=mysql_native_password]
-        # DBの環境変数を設定(database.ym)
-        environment:
-          MYSQL_ROOT_PASSWORD: password
-          MYSQL_DATABASE: app_test
 
 jobs:
   build:
@@ -29,6 +23,13 @@ jobs:
       - ruby/install-deps
 
   test:
+    docker:
+      - image: circleci/mysql:8.0
+        command: [ --default-authentication-plugin=mysql_native_password ]
+        # DBの環境変数を設定(database.ym)
+        environment:
+          MYSQL_ROOT_PASSWORD: password
+          MYSQL_DATABASE: app_test
     executor: # name で使いたい executor を指定する
       name: default
     # testジョブ全体の環境変数を設定
