--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,12 +10,6 @@ executors:
     working_directory: ~/kthr01/src
     docker:
       - image: cimg/ruby:2.7.5
-      - image: circleci/mysql:8.0
-        command: [ --default-authentication-plugin=mysql_native_password ]
-        # DBの環境変数を設定(database.ym)
-        environment:
-          MYSQL_ROOT_PASSWORD: password
-          MYSQL_DATABASE: app_test
 
 jobs:
   build:
@@ -29,9 +23,15 @@ jobs:
       - ruby/install-deps
 
   test:
-    executor: # name で使いたい executor を指定する
-      name: default
-
+    working_directory: ~/kthr01/src
+    docker:
+      - image: cimg/ruby:2.7.5
+      - image: circleci/mysql:8.0
+        command: [ --default-authentication-plugin=mysql_native_password ]
+        # DBの環境変数を設定(database.ym)
+        environment:
+          MYSQL_ROOT_PASSWORD: password
+          MYSQL_DATABASE: app_test
     # testジョブ全体の環境変数を設定
     environment:
       BUNDLE_JOBS: "3"
@@ -66,6 +66,19 @@ jobs:
           name: Run rubocop
           command: bundle exec rubocop
 
+    # EC2にSSH接続し、デプロイを実行
+  deploy:
+    executor: # name で使いたい executor を指定する
+      name: default
+    steps:
+      - checkout:
+          path: ~/kthr01
+#      - add_ssh_keys:
+      - run:
+          name: deploy
+          command: echo 'test'
+#            command: ssh ${USER_NAME}@${HOST_NAME} 'cd'
+
 
 workflows:
   version: 2
@@ -75,3 +88,10 @@ workflows:
       - test:
           requires:
             - build
+      - deploy:
+          requires:
+            - test
+          # masterブランチがpushされた場合のみdeployするようにする。
+          filters:
+            branches:
+              only: feature/ci_executor
