--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -73,11 +73,12 @@ jobs:
     steps:
       - checkout:
           path: ~/kthr01
-#      - add_ssh_keys:
+      # CircleCI に登録した秘密鍵を呼び出す
+      - add_ssh_keys:
+      # CircleCI に登録した環境変数を使ってSSH接続
       - run:
           name: deploy
-          command: echo 'test'
-#            command: ssh ${USER_NAME}@${HOST_NAME} 'cd'
+          command: ssh ${USER_NAME}@${HOST_NAME} 'cd && touch cd_test_`date +%Y%m%d_%H%M`.txt'
 
 
 workflows:
