--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -81,7 +81,7 @@ jobs:
       - run:
           name: deploy
           # command: ssh ${USER_NAME}@${HOST_NAME} 'cd && touch cd_test_`date +%Y%m%d_%H%M`.txt'
-          command: ssh -p ${USER_NAME}@${HOST_NAME}
+          command: ssh -p $SSH_PORT $SSH_USER@$SSH_HOST
 
 
 workflows:
