--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -71,17 +71,17 @@ jobs:
     executor: # nameで使いたいexecutorを指定する
       name: default
     steps:
-      - checkout:
-          path: ~/kthr01
+      - checkout
       # CircleCI に登録した秘密鍵を呼び出す
       - add_ssh_keys:
           fingerprints:
-            - 40:8e:0f:c9:3a:db:41:57:af:33:57:76:88:3e:f0:25
+#            - 40:8e:0f:c9:3a:db:41:57:af:33:57:76:88:3e:f0:25
+              - "40:8e:0f:c9:3a:db:41:57:af:33:57:76:88:3e:f0:25"
       # CircleCI に登録した環境変数を使ってSSH接続
       - run:
           name: deploy
-          # command: ssh ${USER_NAME}@${HOST_NAME} 'cd && touch cd_test_`date +%Y%m%d_%H%M`.txt'
-          command: ssh -p $SSH_PORT $SSH_USER@$SSH_HOST
+          command: ssh ${USER_NAME}@${HOST_NAME} 'cd && touch cd_test_`date +%Y%m%d_%H%M`.txt'
+           # command: ssh ${SSH_USER}@${SSH_HOST}
 
 
 workflows:
