--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -80,8 +80,9 @@ jobs:
       # CircleCI に登録した環境変数を使ってSSH接続
       - run:
           name: deploy
-          command: ssh ${USER_NAME}@${HOST_NAME} 'cd && touch cd_test_`date +%Y%m%d_%H%M`.txt'
-           # command: ssh ${SSH_USER}@${SSH_HOST}
+#          command: ssh ${USER_NAME}@${HOST_NAME} 'cd && touch cd_test_`date +%Y%m%d_%H%M`.txt'
+          command: ssh -o 'StrictHostKeyChecking no' ${USER_NAME}@${PUBLIC_IP} 'cd /var/www'
+          # command: ssh ${SSH_USER}@${SSH_HOST}
 
 
 workflows:
