--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -81,7 +81,7 @@ jobs:
       - run:
           name: deploy
 #          command: ssh ${USER_NAME}@${HOST_NAME} 'cd && touch cd_test_`date +%Y%m%d_%H%M`.txt'
-          command: ssh -o 'StrictHostKeyChecking no' ${USER_NAME}@${PUBLIC_IP} 'cd /var/www'
+          command: ssh -o 'StrictHostKeyChecking no' ${USER_NAME}@${HOST_NAME} 'cd /var/www'
           # command: ssh ${SSH_USER}@${SSH_HOST}
 
 
