--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -79,7 +79,7 @@ jobs:
       # CircleCI に登録した環境変数を使ってSSH接続
       - run:
           name: deploy
-          command: ssh -o 'StrictHostKeyChecking no' ${USER_NAME}@${HOST_NAME} 'cd /home/ec2-user/kthr01/deploy.sh'
+          command: ssh -o 'StrictHostKeyChecking no' ${USER_NAME}@${HOST_NAME} '/home/ec2-user/deploy.sh'
 
 
 workflows:
