--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -79,7 +79,8 @@ jobs:
       # CircleCI に登録した環境変数を使ってSSH接続
       - run:
           name: deploy
-          command: ssh -o 'StrictHostKeyChecking no' ${USER_NAME}@${HOST_NAME} '/home/ec2-user/deploy.sh'
+          command: echo 'deploy'
+#          command: ssh -o 'StrictHostKeyChecking no' ${USER_NAME}@${HOST_NAME} '/home/ec2-user/release.sh'
 
 
 workflows:
@@ -93,7 +94,7 @@ workflows:
       - deploy:
           requires:
             - test
-          # masterブランチがpushされた場合のみdeployするようにする。
+          # mainブランチがpushされた場合のみdeployするようにする。
           filters:
             branches:
-              only: feature/ci_executor
+              only: feature/main
