Dockerfile使い分けるように修正

--- a/Dockerfile_development
+++ b/Dockerfile_development
@@ -1,16 +1,17 @@
 # ベースのイメージを指定
 FROM ruby:2.7
 
-# TODO:development環境の対応を考えること
 # 環境変数設定
-ENV RAILS_ENV=production
+ENV RAILS_ENV=development
 
-# 必要なライブラリをインストール(node.jsとyarnをインストール)※JavaScript関連
-RUN curl -sS https://dl.yarnpkg.com/debian/pubkey.gpg | apt-key add - \
-  && echo "deb https://dl.yarnpkg.com/debian/ stable main" | tee /etc/apt/sources.list.d/yarn.list \
-  && apt-get update -qq \
-  && apt-get install -y nodejs yarn \
-  && apt-get install -y vim
+## nodejsとyarnはwebpackをインストールする際に必要
+# yarnパッケージ管理ツールをインストール
+RUN apt-get update && apt-get install -y curl apt-transport-https wget && \
+curl -sS https://dl.yarnpkg.com/debian/pubkey.gpg | apt-key add - && \
+echo "deb https://dl.yarnpkg.com/debian/ stable main" | tee /etc/apt/sources.list.d/yarn.list && \
+apt-get update && apt-get install -y yarn
+
+
 # 作業ディレクトリを/appディレクトリとする
 WORKDIR /app
 # ローカルのsrcをコンテナの/appディレクトリにコピーする
@@ -23,3 +24,4 @@ RUN bundle config --local set path 'vendor/bundle' \
 COPY start.sh /start.sh
 RUN chmod 744 /start.sh
 CMD ["sh", "/start.sh"]
+
