--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -80,6 +80,7 @@ jobs:
       - run:
           name: deploy
           command: ssh -o 'StrictHostKeyChecking no' ${USER_NAME}@${HOST_NAME} 'cd && ./release.sh renewal'
+          no_output_timeout: 30m
 
 workflows:
   version: 2
