--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,6 +18,8 @@ services:
     build:
       context: .
       dockerfile: Dockerfile_${DOCKER_RAILS_ENV}
+    env_file:
+      - ./.env
     # railsサーバーを起動
     command: bundle exec rails s -p 3000 -b '0.0.0.0'
     # src以下とapp以下を同期
