--- a/src/Gemfile
+++ b/src/Gemfile
@@ -5,6 +5,9 @@ ruby '2.7.5'
 
 # Bundle edge Rails instead: gem 'rails', github: 'rails/rails', branch: 'main'
 gem 'rails', '~> 6.1.4', '>= 6.1.4.4'
+gem 'faker'
+gem 'pry-rails'
+gem 'pry-byebug'
 # Use mysql as the database for Active Record
 gem 'mysql2', '~> 0.5'
 # Use Puma as the app server
