--- a/src/Gemfile
+++ b/src/Gemfile
@@ -8,6 +8,7 @@ gem 'rails', '~> 6.1.4', '>= 6.1.4.4'
 gem 'faker'
 gem 'pry-rails'
 gem 'pry-byebug'
+gem 'coderay', '1.1.3'
 # Use mysql as the database for Active Record
 gem 'mysql2', '~> 0.5'
 # Use Puma as the app server
