--- a/containers/nginx/nginx.conf
+++ b/containers/nginx/nginx.conf
@@ -1,32 +1,40 @@
 # プロキシ先の指定
 # Nginxが受け取ったリクエストをバックエンドのpumaに送信
-upstream webapp {
+# upstreamでサーバグループを定義する。upstreamとはネットワークで下流から上流の通信機器へデータが流れることを指している
+upstream app {
+  # serverでアドレスはドメインかIPアドレスとポート、またはunix:プレフィックスの後に指定されたUNIXドメインソケットパスを指定できます。
+  # ポート未指定はポート80が使用されます。
   # ソケット通信したいのでpuma.sockを指定
-  server unix:///webapp/tmp/sockets/puma.sock;
+  server unix:///app/tmp/sockets/puma.sock;
 }
 
 server {
   listen 80;
+  # バーチャルサーバの名前を設定します。
   # ドメインもしくはIPを指定
-  server_name example.com [or 192.168.xx.xx [or localhost]];
+  # ローカルホストにサーバを立てるのでlocalhostを使う
+  server_name localhost;
 
   access_log /var/log/nginx/access.log;
   error_log  /var/log/nginx/error.log;
 
   # ドキュメントルートの指定
-  root /webapp/public;
+  # ルートディレクトリを設定する。
+  root /app/public;
 
   client_max_body_size 100m;
   error_page 404             /404.html;
   error_page 505 502 503 504 /500.html;
-  try_files  $uri/index.html $uri @webapp;
+  try_files  $uri/index.html $uri @app;
   keepalive_timeout 5;
 
   # リバースプロキシ関連の設定
-  location @webapp {
+  location @app {
     proxy_set_header X-Real-IP $remote_addr;
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     proxy_set_header Host $http_host;
-    proxy_pass http://webapp;
+    # proxy_passディレクティブ。プロキシするサーバのプロトコルとアドレスを指定する
+    # UNIXドメインソケットなので、 upstreamで設定した名前を使います。
+    proxy_pass http://app;
   }
 }
