--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,7 +14,8 @@ services:
     # いまの直下のdockerfileを参照する
     build: .
     # railsサーバーを起動
-    command: bundle exec rails s -p 3000 -b '0.0.0.0'
+#    command: bundle exec rails s -p 3000 -b '0.0.0.0'
+    command: bundle exec puma -C config/puma.rb
     # src以下とapp以下を同期
     volumes:
       - ./src:/app
@@ -27,9 +28,9 @@ services:
   web:
     build:
       context: containers/nginx
-#    volumes:
-#      - ./src/public-data:/webapp/public
-#      - ./src/tmp-data:/webapp/tmp
+    volumes:
+      - ./src/public:/app/public
+      - ./src/tmp:/app/tmp
     ports:
       - 80:80
     depends_on:
